syntax = "proto3";

package runtiva.nats.v1;


import "user-svc/v1/user/user_inputs.proto";
import "user-svc/v1/user/user.proto";

import "nats/v1/common.proto";

//import "google/protobuf/empty.proto";

// NATS Specific messages that are used internally on the server-side. 

// ********** User_Hearbeat ********** //
// Backend NATS messaging for persisting user hearbeat 
message NatsUserHeartbeatRequest {
  repeated MetadataMap headers = 1;
  runtiva.user.v1.UserHeartbeatRequest data = 2;
}

message NatsUserCreateResponse {
  oneof msg {
    runtiva.user.v1.User data = 1;
    ErrorReply error = 2;
  }
}


// ********** User_Create ********** //
// Backend NATS messaging for `User_Create`: Request to create a new chat 
message NatsUserCreateRequest {
  repeated MetadataMap headers = 1;
  runtiva.user.v1.UserCreateRequest data = 2;
}


// ********** User_Delete ********** //
// Backend NATS messaging for `User_Delete`: Deletes a chat 
message NatsUserDeleteRequest {
  repeated MetadataMap headers = 1;
  runtiva.user.v1.UserDeleteRequest data = 2;
}


// ********** User_Delete ********** //
// Backend NATS messaging for retrieving a user's chats and chat_groups.
// Used by Presence service to retrieve user's chats and chat_groups. 
message NatsGetUserChatsRequest {
  repeated MetadataMap headers = 1;
  runtiva.user.v1.GetUserChatsRequest data = 2;
}


message NatsGetUserChatsResponse {
  oneof msg {
    runtiva.user.v1.GetUserChatsResponse data = 1;
    ErrorReply error = 2;
  }
}

