syntax = "proto3";

package runtiva.user.v1;

import "google/protobuf/timestamp.proto";

import "common/v1/common_peer.proto";


message UserHeartbeatRequest {
    bool is_online = 1;
    google.protobuf.Timestamp date = 2;
}

// Inputs are the request messages/objects that the client sends to the server as part of the service call requests.
// Request Message for `Chat_Create` RPC.
message UserCreateRequest {
}

// Request Message for `Chat_Delete` RPC. 
message UserDeleteRequest {
    int64 id = 1;
}


message GetUserChatsRequest {
    int64 user_id = 1;
}


// Currently NATS specific messages
message GetUserChatsResponse {
  repeated  runtiva.common.v1.PeerInput user_peers = 1;
}